docker: Fix various layout issues
- Restyle to match PF4
- Move empty <div> into a React.Fragment
- Add missing pficon classes to buttons
- Enlarge the add dialog to prevent wrapping
- Fix filter
- Fix details spinner size & position

--- a/pkg/docker/docker.css
+++ b/pkg/docker/docker.css
@@ -41,6 +41,13 @@
 
 div.spinner {
     display: inline-block;
+    vertical-align: middle;
+}
+
+.panel-heading .spinner {
+    /* Make the spinner the same height as the buttons */
+    /* (1rem * line height) + combined padding - border - spinner thickness - spinner height */
+    margin: calc(1.5rem + 0.25rem + 2px - 3px - 24px) 0;
 }
 
 /*
@@ -59,10 +66,6 @@ div.spinner {
  */
 .cell-buttons,
 .table > tbody > tr > .cell-buttons {
-    padding-top: 4px;
-    padding-bottom: 4px;
-    width: 30px;
-    padding-right: 15px;
 }
 
 /* Align with the top of the graphs
@@ -102,21 +105,18 @@ div.spinner {
     }
 }
 
-#image-details-containers .container-column-actions,
-#containers .container-column-actions {
-    vertical-align: top;
-    padding-top: 4px;
-    padding-bottom: 4px;
+#image-details > .content {
+    padding-bottom: 0;
 }
 
-#image-details-containers .cell-buttons button,
-#image-details-containers .table > tbody > tr > .cell-buttons button,
-#containers .cell-buttons button,
-#containers .table > tbody > tr > .cell-buttons button {
-    position: absolute;
-    right: 36px;
-    width: 28px;
-    height: 28px;
+#image-details > .image-details-used {
+    padding-top: 0;
+}
+
+#image-details-containers .container-column-actions,
+#containers .container-column-actions {
+    padding: 0.5rem;
+    text-align: right;
 }
 
 #container-details .info-table-ct {
@@ -144,17 +144,17 @@ div.spinner {
     margin-top: 10px;
 }
 
-#containers-search-image-results tr.active td {
-    background-color: #f5f9fc;
-}
-
 #containers-search-image-search {
     padding-left: 25px;
 }
 
 #containers-search-image-dialog .containers-search-image-search-icon {
     left: 0;
-    top: 6px;
+    top: 0;
+    height: 100%;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #containers-search-image-waiting.spinner {
@@ -178,6 +178,10 @@ div.spinner {
 #containers #containers-images .table,
 #image-details-containers .table {
     table-layout: fixed;
+}
+
+#containers #containers-containers .table th {
+    max-width: calc( (20em + 25vw) / 2);
 }
 
 #containers #containers-containers .table th,
@@ -219,7 +223,7 @@ div.spinner {
 .containers-run-inline form .fa-plus {
     height: 26px;
     width: 26px;
-    padding: 4px;
+    padding: 0.5rem;
     float: right;
     margin-left: 5px;
 }
@@ -229,7 +233,7 @@ div.spinner {
     border-width: 0 1px 1px 1px;
     border-style: solid;
     border-color: #bababa;
-    padding: 4px;
+    padding: 0.5rem;
 }
 
 .containers-run-inline .form-inline:first-of-type {
@@ -237,11 +241,11 @@ div.spinner {
 }
 
 .containers-run-inline .form-control {
-  margin: 0 4px;
+  margin: 0 0.5rem;
 }
 
 .containers-run-inline .form-group:first-of-type .form-control {
-  margin: 0 4px 0 0;
+  margin: 0 0.5rem 0 0;
 }
 
 .containers-run-portmapping input {
@@ -265,8 +269,8 @@ div.spinner {
 }
 
 #select-linked-containers label {
-    padding-right: 4px;
-    padding-left: 4px;
+    padding-right: 0.5rem;
+    padding-left: 0.5rem;
 }
 
 @media (min-width: 768px) {
@@ -290,7 +294,7 @@ div.spinner {
 
 #restart-policy-retries-container {
     display: inline;
-    margin-left: 4px;
+    margin-left: 0.5rem;
 }
 
 #restart-policy-retries {
@@ -314,53 +318,46 @@ div.spinner {
     height: 120px;
 }
 
-#container-details .panel-heading .pull-right {
-    height: 25px;
-}
-
 .resource-value {
     min-width: 8em;
     text-align: right;
 }
 
 .content-filter {
-    background: #f5f5f5;
-    border-bottom: 1px solid #ddd;
-    padding: 10px 16px 10px 20px;
-    position: fixed;
-    width: 100%;
-    top: 0px;
-    right: 0px;
-    z-index: 1;
-    height: 50px;
-}
-
-.content-filter + div {
-    margin-top: 70px;
+    background: var(--pf-global--BackgroundColor--150);
+    border-bottom: 1px solid var(--color-border);
+    padding: 0.75rem 1.25rem;
+    position: sticky;
+    display: flex;
+    align-items: baseline;
+    min-height: 4rem; /* Align height with host dropdown */
 }
 
 .content-filter input[type="text"] {
-    display: inline-block;
-    vertical-align: middle;
-    width: 200px;
-    margin-left: 6px;
-    margin-top: 2px;
+    margin-left: 0.5rem;
+    flex: auto;
+    max-width: 50%;
 }
 
-.content-filter .bootstrap-select {
-    margin-top: 2px;
+.content-filter .ct-select {
+    flex: none;
+    max-width: 50%;
 }
 
 .content-filter h3 {
-    display: inline;
-    font-size: 18px;
-    line-height: 28px;
+    font-size: var(--pf-global--FontSize--xl);
+    margin: 0;align-self: auto;
+}
+
+/* Overflow names that are too long */
+.panel-heading,
+.content-filter h3 {
+    word-break: break-word;
 }
 
 .content-filter i {
-    font-size: 24px;
     position: relative;
-    padding-right: 3px;
+    padding-right: 0.25rem;
 }
 
 .content-filter i.pficon-image {
@@ -378,7 +375,16 @@ div.spinner {
 }
 
 .content-filter a {
-    padding-left: 30px;
+    padding-left: 1.5rem;
+}
+
+.content-filter .content-filter-actions {
+    display: grid;
+    flex: auto;
+    grid-auto-flow: column;
+    grid-gap: 0.5rem;
+    justify-content: end;
+    text-align: right;
 }
 
 /*
@@ -548,13 +554,13 @@ div.spinner {
 #storage-overview .free-unit {
     display: inline-block;
     font-size: 12px;
-    line-height: 14px;
+    line-height: 10.5rem;
 }
 
 #storage-overview .used-total {
     float: right;
     font-size: 12px;
-    line-height: 14px;
+    line-height: 10.5rem;
     margin-top: 13px;
     border-left: 2px solid #DDD;
 }
@@ -616,11 +622,6 @@ table.drive-list td:nth-child(2) img {
     padding-left: 32px;
     padding-top: 1em;
     color: var(--color-subtle-copy);
-}
-
-#image-details .listing-ct-inline {
-    padding-left: 20px;
-    padding-right: 20px;
 }
 
 #delete-image-confirmation-dialog-containers {
